--- a/style.css
+++ b/style.css
@@ -8,9 +8,15 @@
 body {
     background-image: url(images/bg-header-desktop.png);
     background-repeat: no-repeat;
+    background-color: #F5F6F8;
     width:1440px;
 }
-
+.main {
+    background-color: white;
+    background-image: url(images/bg-header-desktop.png);
+    background-repeat: no-repeat;
+   
+}
 .top_logo {
     display: block;
     margin:auto;
@@ -74,4 +80,39 @@ body {
 .box1, img {
     text-align: center;
 }
+.box2 {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 
+
+/*FOOTER STYLING*/
+
+.footer {
+    border:1px solid;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.footer_logo img{
+    border:1px solid;
+    height:50px;
+    width:50px;
+}
+.links {
+    
+}
+.socials {
+    
+}
+
+.grid_container {
+    display:grid;
+    grid-template-columns: auto auto auto;
+}
+.grid_item {
+    
+}
