--- a/style.css
+++ b/style.css
@@ -19,12 +19,15 @@ body {
 }
 .top_logo {
     display: block;
-    margin:auto;
+    margin:120px auto;
+    
 }
 .main_title {
     text-align: center;
-    font-size:2rem;
+    font-size:2.4rem;
     color:hsl(210, 10%, 33%);
+    margin-top:-40px;
+   
 }
 .title2 {
     text-align: center;
@@ -40,8 +43,11 @@ body {
     text-align: center;
     font-size:1.25rem;
     color:hsl(201, 11%, 66%);
+    margin:30px 330px;
+    font-weight: 400;
 }
 .button_box {
+    margin:30px auto 180px auto;
     text-align: center;
 }
 .green {
@@ -66,12 +72,12 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
+    margin-left:-50px;
 }
 .text_box {
     display:flex;
     flex-direction: column;
     justify-content: center;
-   
 }
 .bottom_box {
     display:flex;
